[package]
name = "mochi"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "Simple & fast http mock server."
authors = ["Bloom Perf Project <bloomperf@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
serde_yaml = "0.9.22"
axum = {version = "0.6.18", features =["headers", "macros"] }
regex = "1.9.0"
itertools = "0.11.0"
axum-prometheus = "0.4.0"
anyhow = "1.0.71"
fern = "0.6.2"
log = "0.4.19"
humantime = "2.1.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tower-http = { version = "0.4.4", features = ["trace"] }
tracing-appender = "0.2.2"